--- a/information.html
+++ b/information.html
@@ -7,17 +7,16 @@
 </head>
 <body>
 	<header>
-		<div class="container">
-			<h1>The Meaning of Flowers</h1>
-			<nav>
-				<ul>
+		<nav>
+			<ul>
 				<li><a href="home.html">Home</a></li>
 				<li><a href="information.html">Information</a></li>
 				<li><a href="FAQ.html">FAQ</a></li>
 				<li><a href="contactus.html">Contact Us</a></li>
-				</ul>
-			</nav>
-		</div>
+			</ul>
+		</nav>
+		<h1>The Meaning of Flowers</h1>
+		<p>Discover the symbolism behind your favorite flowers</p>
 	</header>
     <section class="gallery">
         <div class="container">
