--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
       <div class="content_container">
         <ul>
           <li style="float: left;"><img class="logo" src="images/Logo.png"/><span><a class="logo" href="index.html">Floriography</a></span></li>
-          <li><a href="feature.html">About</a></li>
-          <li><a href="content.html">Category</a></li>
+          <li><a href="home.html">About</a></li>
+          <li><a href="information.html">Category</a></li>
           <li><a href="contact.html">Contact</a></li>
           <li></li>
           <li></li>
