--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Floriography</title>
+  <title>Bonsai</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta property="og:title" content="">
@@ -12,8 +12,9 @@
   <meta property="og:image" content="">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="manifest" href="site.webmanifest">
-  <link href='https://fonts.googleapis.com/css?family=Open Sans' rel='stylesheet'>
-  <link rel="stylesheet" href="style.css">
+  <link href='https://fonts.googleapis.com/css?family=Rozha One' rel='stylesheet'>
+  <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="style-home.css">
   <script src="java.js" defer ></script>
   <meta name="theme-color" content="#fafafa">
 </head>
@@ -22,10 +23,10 @@
   <nav class="stripe menubar">
       <div class="content_container">
         <ul>
-          <li style="float: left;"><img class="logo" src="images/Logo.png"/><span><a class="logo" href="index.html">Floriography</a></span></li>
-          <li><a href="home.html">About</a></li>
-          <li><a href="information.html">Category</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li style="float: left;"><img class="logo" src="images/logo.png"><span><a class="logo" href="home.html">Bonsai</a></span></li>
+          <li><a href="information.html">Information</a></li>
+          <li><a href="FAQ.html">FAQ</a></li>
+          <li><a href="contactus.html">Contact Us</a></li>
           <li></li>
           <li></li>
           <li>
@@ -37,27 +38,28 @@
 
   <div class="stripe introduction">
     <div class="content_container">
-    <h1><b>The language of flowers</b></h1>
-    <h2><i>The dictionary of flowers and their beautiful timeless meanings</i></h2>
-      <p class="intro_text">Floriography is the language of flowers. All flowers hold different meanings, often based on the type of flower, the colour of the flower, or both. And floriography is the art of communicating through different flower types. Once you learn and understand the meaning of flowers, giving flowers as gifts becomes so much more thoughtful as you can convey just how you feel with a bouquet! 
-      </p>
+    <h1><b>Welcome to Bonsai<br> The art of Nature</b></h1>
+    <h2><i>An intro to the art of Bonsai, literally taking control of nature</i></h2>
+      <p class="intro_text">Bonsai is a community built by enthusiasts and experts from around the world. We introduce you to the fascinating and living art of Bonsai, and help you get started!</p>
       <button class="learnmore">
-        <a href="#overall">Learn more!</a>
+        <a href="#overall">Learn more</a>
       </button>
   </div>
   </div>
 
-  <div class="stripe overall" id="overall">
+  <div class="stripe history">
     <div class="content_container">
-    <h2>About Us</h2>
-      <p class="overall">Floriography is the language of flowers. All flowers hold different meanings, often based on the type of flower, the colour of the flower, or both. And floriography is the art of communicating through different flower types. Once you learn and understand the meaning of flowers, giving flowers as gifts becomes so much more thoughtful as you can convey just how you feel with a bouquet! 
+      <div class="overall">
+        <h2>History</h2>
+      <p class="overall">Bonsai is an inspirational art-form with a rich history. So we have put together this section with galleries, movies, top 10's and Japanese Bonsai trees for you to enjoy. There's so much more to bonsais than what meets the eye! Explore the history of these ancient trees or how to care for one right here in the ultimate bonsai guide!
       </p>
-      <div class="overallblockquote">
-      <blockquote class="overall">The rose is red, the violet's blue,<br>
-        The honey's sweet, and so are you.</blockquote>
-      <button class="overall">
-        <a href="feature.html">Learn more!</a>
-      </button>
+      <p class="overallblockquote">
+        Did you know that bonsai trees originated in China, NOT Japan?<br>
+        Or that they symbolize harmony and good luck in some cultures?<br>
+        Or that the oldest bonsai tree is over 1,000 years old?<br></p>
+        <button class="overall">
+          <a href="feature.html">Learn more</a>
+        </button>
       </div>
   </div>
   </div>
@@ -65,30 +67,40 @@
   <div class="stripe features">
     <div class="content_container">
       <h2>Categories</h2>
+      <p class="overall">Most people are introduced to Bonsai by purchasing a cheap, pre-made bonsai tree. Although this is without a doubt the easiest way to get started, it's much more interesting, cost-effective, and rewarding to learn how to grow and style your own tree.</p>
     </div>
     <div class="content_container page_grid">
       <div class="feature_item category1">
         <button>
           <a href="content.html">
-          <h3>Alphabets</h3>
+          <h3>Bonsai tree care</h3>
         </a>
         </button>
       </div>
       <div class="feature_item category2">
         <button>
           <a href="content.html">
-         <h3>Colors</h3>
-       </a>
-        </button>
-      </div>
-      <div class="feature_item category3">
-        <button>
-          <a href="content.html">
-         <h3>Months</h3>
+         <h3>Growing and cultivating</h3>
        </a>
         </button>
       </div>
   </div>
+  <div class="content_container page_grid">
+    <div class="feature_item category1">
+      <button>
+        <a href="content.html">
+       <h3>Styling</h3>
+     </a>
+      </button>
+    </div>
+    <div class="feature_item category2">
+      <button>
+        <a href="content.html">
+       <h3>Popular tree species</h3>
+     </a>
+      </button>
+    </div>
+</div>
   </div>
 
 
