--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         Or that they symbolize harmony and good luck in some cultures?<br>
         Or that the oldest bonsai tree is over 1,000 years old?<br></p>
         <button class="overall">
-          <a href="feature.html">Learn more</a>
+          <a href="information.html">Learn more</a>
         </button>
       </div>
   </div>
@@ -72,14 +72,14 @@
     <div class="content_container page_grid">
       <div class="feature_item category1">
         <button>
-          <a href="content.html">
+          <a href="FAQ.html">
           <h3>Bonsai tree care</h3>
         </a>
         </button>
       </div>
       <div class="feature_item category2">
         <button>
-          <a href="content.html">
+          <a href="FAQ.html">
          <h3>Growing and cultivating</h3>
        </a>
         </button>
@@ -88,14 +88,14 @@
   <div class="content_container page_grid">
     <div class="feature_item category1">
       <button>
-        <a href="content.html">
+        <a href="FAQ.html">
        <h3>Styling</h3>
      </a>
       </button>
     </div>
     <div class="feature_item category2">
       <button>
-        <a href="content.html">
+        <a href="FAQ.html">
        <h3>Popular tree species</h3>
      </a>
       </button>
