--- a/index.html
+++ b/index.html
@@ -107,23 +107,18 @@
   <button onclick="topFunction()" id="top" title="Go to top">Top</button>
   <footer class="footer">
     <div class="footer1">
-      <img class="logoend" src="images/Logo.png"/>
-      <span><p class="footer1">Floriography</p></span>
+      <img class="logo" src="images/logo.png"><span><a class="logo" href="home.html">Bonsai</a></span>
     </div>
     <div class="footer2">
       <p class="footer2">
         Floriography is a blog website where you will find great tutorials on choosing flowers based on flower meanings. Here the meaning of each flower is beautifully described and explained in various ways such as color and myth.
       </p>
       <p class="footer3">
-        Written by Ngoc Uong. Visit me at: Miami University, Oxford, USA
+        Written by Kaia Nguyen, Khanh Mai, Ngoc Uong and Rachel Farvel. 
+        <br>At Miami University, Oxford, Ohio, USA.
       </p>
-    </div>
-    <div class="copyright">
-    <p>
-      Copyright ©2022 Uongngoc
-    </p>
-    <a class="portfolio" href="https://www.behance.net/ngcung">behance.net/ngcung</a>
-    </div>
+    </div> 
+    <!--If you copy the footer, make sure to copy all the tag in the css --> 
   </footer>
 
 
