--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         </ul>
       </div>
   </nav>
+  <!--If you copy the menubar, make sure to copy all the tag in the css --> 
 
   <div class="stripe introduction">
     <div class="content_container">
