--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <div class="stripe history">
     <div class="content_container">
       <div class="overall">
-        <h2>History</h2>
+        <h2>Information</h2>
       <p class="overall">Bonsai is an inspirational art-form with a rich history. So we have put together this section with galleries, movies, top 10's and Japanese Bonsai trees for you to enjoy. There's so much more to bonsais than what meets the eye! Explore the history of these ancient trees or how to care for one right here in the ultimate bonsai guide!
       </p>
       <p class="overallblockquote">
@@ -67,7 +67,7 @@
 
   <div class="stripe features">
     <div class="content_container">
-      <h2>Categories</h2>
+      <h2>FAQ</h2>
       <p class="overall">Most people are introduced to Bonsai by purchasing a cheap, pre-made bonsai tree. Although this is without a doubt the easiest way to get started, it's much more interesting, cost-effective, and rewarding to learn how to grow and style your own tree.</p>
     </div>
     <div class="content_container page_grid">
@@ -108,19 +108,18 @@
   <button onclick="topFunction()" id="top" title="Go to top">Top</button>
   <footer class="footer">
     <div class="footer1">
-      <img class="logo" src="images/logo.png"><span><a class="logo" href="home.html">Bonsai</a></span>
+      <p class="logoend" href="home.html"><a>Bonsai</a></p>
+      <img class="logoend" src="images/logo.png">
     </div>
     <div class="footer2">
       <p class="footer2">
-        Floriography is a blog website where you will find great tutorials on choosing flowers based on flower meanings. Here the meaning of each flower is beautifully described and explained in various ways such as color and myth.
+        Written by Kaia Nguyen, Khanh Mai, Ngoc Uong and Rachel Farvel. <br>
+        At Miami University, Oxford, Ohio, USA. <br> 
+        &copy; The Meaning of Flowers, 2023
       </p>
-      <p class="footer3">
-        Written by Kaia Nguyen, Khanh Mai, Ngoc Uong and Rachel Farvel. 
-        <br>At Miami University, Oxford, Ohio, USA.
-      </p>
-    </div> 
-    <!--If you copy the footer, make sure to copy all the tag in the css --> 
+    </div>
   </footer>
+  <!--If you copy the footer, make sure to copy all the tag in the css --> 
 
 
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
