--- a/index.html
+++ b/index.html
@@ -73,35 +73,33 @@
     <div class="content_container page_grid">
       <div class="feature_item category1">
         <button>
-          <a href="FAQ.html">
+          <a href="content.html">
           <h3>Bonsai tree care</h3>
         </a>
         </button>
       </div>
       <div class="feature_item category2">
         <button>
-          <a href="FAQ.html">
+          <a href="content.html">
          <h3>Growing and cultivating</h3>
        </a>
         </button>
       </div>
+      <div class="feature_item category3">
+        <button>
+          <a href="content.html">
+         <h3>Styling</h3>
+       </a>
+        </button>
+      </div>
+      <div class="feature_item category4">
+        <button>
+          <a href="content.html">
+         <h3>Popular tree species</h3>
+       </a>
+        </button>
+      </div>
   </div>
-  <div class="content_container page_grid">
-    <div class="feature_item category1">
-      <button>
-        <a href="FAQ.html">
-       <h3>Styling</h3>
-     </a>
-      </button>
-    </div>
-    <div class="feature_item category2">
-      <button>
-        <a href="FAQ.html">
-       <h3>Popular tree species</h3>
-     </a>
-      </button>
-    </div>
-</div>
   </div>
 
 
