Update information page

--- a/information.html
+++ b/information.html
@@ -1,76 +1,140 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html class="no-js" lang="">
+
 <head>
-	<meta charset="UTF-8">
-	<title>The Meaning of Flowers - Information</title>
-	<link rel="stylesheet" href="style-information.css">
+  <meta charset="utf-8">
+  <title>Bonsai</title>
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta property="og:title" content="">
+  <meta property="og:type" content="">
+  <meta property="og:url" content="">
+  <meta property="og:image" content="">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="manifest" href="site.webmanifest">
+  <link href='https://fonts.googleapis.com/css?family=Rozha One' rel='stylesheet'>
+  <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="style-information.css">
+  <script src="java.js" defer ></script>
+  <meta name="theme-color" content="#fafafa">
 </head>
+
 <body>
-	<header>
-		<nav>
-			<ul>
-				<li><a href="home.html">Home</a></li>
-				<li><a href="information.html">Information</a></li>
-				<li><a href="FAQ.html">FAQ</a></li>
-				<li><a href="contactus.html">Contact Us</a></li>
-			</ul>
-		</nav>
-		<h1>The Meaning of Flowers</h1>
-		<p>Discover the symbolism behind your favorite flowers</p>
-	</header>
-    <section class="gallery">
-        <div class="container">
-            <h2>Gallery</h2>
-            <div class="images">
-                <img src="images/flower-1.jpg" alt="flower 1">
-                <img src="images/flower-2.jpg" alt="flower 2">
-                <img src="images/flower-3.jpg" alt="flower 3">
-                <img src="images/flower-4.jpg" alt="flower 4">
-                <img src="images/flower-5.jpg" alt="flower 5">
-                <img src="images/flower-6.jpg" alt="flower 6">
-                <img src="images/flower-7.jpg" alt="flower 7">
-                <img src="images/flower-8.jpg" alt="flower 8">
-                <img src="images/flower-9.jpg" alt="flower 9">
-                <img src="images/flower-10.jpg" alt="flower 10">
-                <img src="images/flower-11.jpg" alt="flower 11">
-                <img src="images/flower-12.jpg" alt="flower 12">
-                <img src="images/flower-13.jpg" alt="flower 13">
-                <img src="images/flower-14.jpg" alt="flower 14">
-                <img src="images/flower-15.jpg" alt="flower 15">
-                <img src="images/flower-16.jpg" alt="flower 16">
-                <img src="images/flower-17.jpg" alt="flower 17">
-                <img src="images/flower-18.jpg" alt="flower 18">
-                <img src="images/flower-19.jpg" alt="flower 19">
-                <img src="images/flower-20.jpg" alt="flower 20">
-            </div>
+  <nav class="stripe menubar">
+      <div class="content_container">
+        <ul>
+          <li style="float: left;"><img class="logo" src="images/logo.png"><span><a class="logo" href="index.html">Bonsai</a></span></li>
+          <li><a href="information.html">Information</a></li>
+          <li><a href="FAQ.html">FAQ</a></li>
+          <li><a href="contactus.html">Contact Us</a></li>
+          <li></li>
+          <li></li>
+          <li>
+            <input type="text" placeholder="Search..">
+          </li>
+        </ul>
+      </div>
+  </nav>
+  <!--If you copy the menubar, make sure to copy all the tag in the css --> 
+
+  <div class="stripe introduction">
+    <div class="content_container">
+    <h1><b>Information<br> More about Bonsai</b></h1>
+  </div>
+  </div>
+
+  <div class="stripe info">
+    <div class="content_container">
+      <h2>History of Bonsai</h2>
+    <p>
+      The art of bonsai originated in China over a thousand years ago, and
+      was later adopted and refined by the Japanese. Bonsai became popular in
+      Japan during the Kamakura period (1185-1333), and has since spread to
+      other parts of the world.
+    </p>
+    <h2>Types of Bonsai</h2>
+    <p>
+      There are many types of trees and plants that can be grown as bonsai.
+      Some popular types include: juniper, pine, maple, elm, and ficus.
+      Bonsai can also be classified based on their style, such as formal
+      upright, informal upright, slanting, cascade, and semi-cascade.
+    </p>
+    </div>
+  </div>
+
+  <div class="stripe slide">
+    <div class="content_container"> 
+      <!-- Slideshow container -->
+      <div class="slideshow-container">
+        <!-- Full-width images with number and caption text -->
+        <div class="mySlides fade">
+            <div class="numbertext">1/5</div>
+            <img src="images/bonsai-house.jpeg" style="width:100%" alt="Bonsai in front of an old house">
+            <div class="text">Bonsai in front of an old house</div>
         </div>
-    </section>
+        <div class="mySlides fade">
+            <div class="numbertext">2/5</div>
+            <img src="images/bonsai-inside.jpeg" style="width:100%" alt="Bonsai inside a home">
+            <div class="text">Bonsai inside a home</div>
+        </div>
+        <div class="mySlides fade">
+            <div class="numbertext">3/5</div>
+            <img src="images/bonsai-statue.jpeg" style="width:100%" alt="Statues on bonsai">
+            <div class="text">Statues on bonsai</div>
+        </div>
+        <div class="mySlides fade">
+            <div class="numbertext">4/5</div>
+            <img src="images/bonsai-unique.jpeg" style="width:100%" alt="A unique bonsai">
+            <div class="text">A unique bonsai</div>
+        </div>
+        <div class="mySlides fade">
+          <div class="numbertext">5/5</div>
+          <img src="images/bonsai-unique.jpeg" style="width:100%" alt="A unique bonsai">
+          <div class="text">A unique bonsai</div>
+      </div>
+        <!-- Next and previous buttons -->
+        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+    </div>
+    <br>
+    <!-- The dots/circles -->
+    <div style="text-align:center">
+        <span class="dot" onclick="currentSlide(1)"></span> 
+        <span class="dot" onclick="currentSlide(2)"></span> 
+        <span class="dot" onclick="currentSlide(3)"></span>
+        <span class="dot" onclick="currentSlide(4)"></span>
+        <span class="dot" onclick="currentSlide(5)"></span>
+    </div>
+</div>
+  </div>
+
+  <button onclick="topFunction()" id="top" title="Go to top">Top</button>
+  <footer class="footer">
+    <div class="footer1">
+      <p class="logoend" href="home.html"><a>Bonsai</a></p>
+      <img class="logoend" src="images/logo.png">
+    </div>
+    <div class="footer2">
+      <p class="footer2">
+        Written by Kaia Nguyen, Khanh Mai, Ngoc Uong and Rachel Farvel. <br>
+        At Miami University, Oxford, Ohio, USA. <br> 
+        &copy; The Meaning of Flowers, 2023
+      </p>
+    </div>
+  </footer>
+
+
+  <script src="js/vendor/modernizr-3.11.2.min.js"></script>
+  <script src="js/plugins.js"></script>
+  <script src="js/main.js"></script>
+
+  <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
+  <script>
+    window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
+    ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
     
-    <section class="fun-facts">
-        <div class="container">
-            <h2>Fun Facts</h2>
-            <p>Flowers are not only beautiful, but they also have many interesting facts associated with them. Here are a few fun facts about flowers:</p>
-            <ul>
-                <li>The world's largest flower is the Rafflesia arnoldii. It can grow up to three feet across and weigh up to 15 pounds.</li>
-                <li>The Titan arum, also known as the "corpse flower," is the world's largest unbranched inflorescence. It can grow up to 10 feet tall and smells like rotting flesh.</li>
-                <li>The iris is named after the Greek goddess of the rainbow, who was also a messenger for the gods. This is because of the many colors of irises.</li>
-                <li>The lotus flower is considered sacred in many cultures and religions, including Hinduism and Buddhism. It is a symbol of purity, enlightenment, and rebirth.</li>
-                <li>The stamen of the orchid flower is unique because it has only one pollen sac. This is in contrast to other flowers that typically have two or more pollen sacs per stamen.</li>
-            </ul>
-            </div>
-            </section>
-            <section class="other-resources">
-                <div class="container">
-                    <h2>Other Resources</h2>
-                    <p>Here are some other resources where you can learn more about flowers:</p>
-                    <ul>
-                        <li><a href="https://www.gardeningknowhow.com/ornamental/flowers/">Gardening Know How</a></li>
-                        <li><a href="https://www.thespruce.com/flowers-4127787">The Spruce - Flowers</a></li>
-                        <li><a href="https://www.proflowers.com/blog/">ProFlowers Blog</a></li>
-				<li><a href="https://www.teleflora.com/blog/">Teleflora Blog</a></li>
-			</ul>
-		</div>
-	</section>
-</main>
+  </script>
+  <script src="https://www.google-analytics.com/analytics.js" async></script>
 </body>
+
 </html>
