--- a/home.html
+++ b/home.html
@@ -11,9 +11,9 @@
 		<nav>
 			<ul>
 				<li><a href="home.html">Home</a></li>
-				<li><a href="information.html">Information</a></li>
+				<li><a href="information.html">INFORMATION</a></li>
 				<li><a href="FAQ.html">FAQ</a></li>
-				<li><a href="contactus.html">Contact Us</a></li>
+				<li><a href="contactus.html">CONTACT US Us</a></li>
 			</ul>
 		</nav>
 		<h1>The Meaning of Flowers</h1>
