--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
       <div class="content_container">
         <ul>
           <li style="float: left;"><img class="logo" src="images/logo.png"><span><a class="logo" href="index.html">Bonsai</a></span></li>
-          <li><a href="information.html">Information</a></li>
+          <li><a href="information.html">INFORMATION</a></li>
           <li><a href="FAQ.html">FAQ</a></li>
-          <li><a href="contactus.html">Contact Us</a></li>
+          <li><a href="contactus.html">CONTACT US</a></li>
           <li></li>
           <li></li>
           <li>
