--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
   <link rel="manifest" href="site.webmanifest">
   <link href='https://fonts.googleapis.com/css?family=Rozha One' rel='stylesheet'>
   <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style-home.css">
   <script src="java.js" defer ></script>
   <meta name="theme-color" content="#fafafa">
 </head>
