--- a/FAQ.html
+++ b/FAQ.html
@@ -19,9 +19,21 @@
 </head>
 
 <body>
-  
-</body>
-
+  <nav class="stripe menubar">
+    <div class="content_container">
+      <ul>
+        <li style="float: left;"><img class="logo" src="images/logo.png"><span><a class="logo" href="home.html">Bonsai</a></span></li>
+        <li><a href="information.html">INFORMATION</a></li>
+        <li><a href="FAQ.html">FAQ</a></li>
+        <li><a href="contactus.html">CONTACT US</a></li>
+        <li></li>
+        <li></li>
+        <li>
+          <input type="text" placeholder="Search..">
+        </li>
+      </ul>
+    </div>
+</nav>
 
   <button onclick="topFunction()" id="top" title="Go to top">Top</button>
   <footer class="footer">
@@ -44,6 +56,7 @@
     <a class="portfolio" href="https://www.behance.net/ngcung">behance.net/ngcung</a>
     </div>
   </footer>
+</body>
 
 
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
