--- a/information.html
+++ b/information.html
@@ -23,10 +23,11 @@
   <nav class="stripe menubar">
       <div class="content_container">
         <ul>
-          <li style="float: left;"><img class="logo" src="images/logo.png"><span><a class="logo" href="index.html">Bonsai</a></span></li>
+          <li style="float: left;"><img class="logo" src="images/logo.png"><span><a class="logo" 
+            href="index.html">Bonsai</a></span></li>
           <li><a href="information.html">INFORMATION</a></li>
           <li><a href="FAQ.html">FAQ</a></li>
-          <li><a href="contactus.html">CONTACT US Us</a></li>
+          <li><a href="contactus.html">CONTACT US</a></li>
           <li></li>
           <li></li>
           <li>
@@ -35,7 +36,6 @@
         </ul>
       </div>
   </nav>
-  <!--If you copy the menubar, make sure to copy all the tag in the css --> 
 
   <div class="stripe introduction">
     <div class="content_container">
@@ -43,23 +43,13 @@
   </div>
   </div>
 
-  <div class="stripe info">
+  <div class="stripe message">
     <div class="content_container">
-      <h2>History of Bonsai</h2>
     <p>
-      The art of bonsai originated in China over a thousand years ago, and
-      was later adopted and refined by the Japanese. Bonsai became popular in
-      Japan during the Kamakura period (1185-1333), and has since spread to
-      other parts of the world.
+      If you find yourself overwhelemd with the abundance of information on bonsai due to its long history, 
+      take a breather and check out the photo slideshows below to gain a deeper understanding of bonsai and its care requirements.
     </p>
-    <h2>Types of Bonsai</h2>
-    <p>
-      There are many types of trees and plants that can be grown as bonsai.
-      Some popular types include: juniper, pine, maple, elm, and ficus.
-      Bonsai can also be classified based on their style, such as formal
-      upright, informal upright, slanting, cascade, and semi-cascade.
-    </p>
-    </div>
+  </div>
   </div>
 
   <div class="stripe slide">
@@ -70,17 +60,29 @@
         <div class="mySlides fade">
             <div class="numbertext">1/5</div>
             <img src="images/bonsai-house.jpeg" style="width:100%" alt="Bonsai in front of an old house">
-            <div class="text">Bonsai in front of an old house</div>
+            <div class="text">The ultimate goal of growing a Bonsai is to create a miniaturized but 
+              realistic representation of nature encapsulated within a tree. It's noteworthy that 
+              Bonsai trees aren't inherently genetically dwarfed; rather, any tree species can be 
+              meticulously shaped and cultivated to form a stunning Bonsai creation.
+            </div>
         </div>
         <div class="mySlides fade">
             <div class="numbertext">2/5</div>
             <img src="images/bonsai-inside.jpeg" style="width:100%" alt="Bonsai inside a home">
-            <div class="text">Bonsai inside a home</div>
+            <div class="text">The art of Bonsai offers a plethora of styles to choose from, 
+              and they can be categorized in various ways. However, for the sake of establishing a solid foundation, 
+              let us begin with the five basic forms, which are defined by the tree's angle of growth from a container.
+              This tree is in the Slanting Style - shakan. </div>
         </div>
         <div class="mySlides fade">
             <div class="numbertext">3/5</div>
-            <img src="images/bonsai-statue.jpeg" style="width:100%" alt="Statues on bonsai">
-            <div class="text">Statues on bonsai</div>
+            <img src="images/bonsai-straight.jpeg" style="width:100%" alt="Small straight bonsai">
+            <div class="text">This particular Bonsai tree showcases the Informal Upright Style - Moyogi. 
+              It is the most popular Bonsai styles which depicts a tree in a natural setting, 
+              having endured the forces of nature; therefore has a twisted trunk and sag branches. 
+              Other basic  styles include the Formal Upright Style - Chokan, which portrays a tree growing naturally in an open area without any physical stress. 
+              The Semi-Cascade Style, known as Han-Kengai, and the Full Cascade Style - Kengai, feature trees that appear 
+              to be hanging from the side of a cliff, either by the seashore or a riverbank.</div>
         </div>
         <div class="mySlides fade">
             <div class="numbertext">4/5</div>
