--- a/contactus.html
+++ b/contactus.html
@@ -44,7 +44,7 @@
   </div>
 
 <main>
-    <div class="form-container"; style="margin: 6em 10em 10em 10em";>
+    <div class="form-container";>
         <h1>Submission Form</h1>
         <form onsubmit="showThankYouMessage(); return false;">
           <label for="name">Name:</label>
