--- a/contactus.html
+++ b/contactus.html
@@ -90,7 +90,7 @@
 <script>
     function showThankYouMessage() {
         document.querySelector(".form-container").style.display = "none";
-        document.querySelector(".thank-you-message").style.display = "block";
+        document.querySelector(".message").style.display = "block";
     }
         function handleSubmit(event) {
         event.preventDefault();
