--- a/FAQ.html
+++ b/FAQ.html
@@ -35,27 +35,20 @@
     </div>
 </nav>
 
-  <button onclick="topFunction()" id="top" title="Go to top">Top</button>
-  <footer class="footer">
-    <div class="footer1">
-      <img class="logoend" src="images/Logo.png"/>
-      <span><p class="footer1">Floriography</p></span>
-    </div>
-    <div class="footer2">
-      <p class="footer2">
-        Floriography is a blog website where you will find great tutorials on choosing flowers based on flower meanings. Here the meaning of each flower is beautifully described and explained in various ways such as color and myth.
-      </p>
-      <p class="footer3">
-        Written by Ngoc Uong. Visit me at: Miami University, Oxford, USA
-      </p>
-    </div>
-    <div class="copyright">
-    <p>
-      Copyright ©2022 Uongngoc
+<button onclick="topFunction()" id="top" title="Go to top">Top</button>
+<footer class="footer">
+  <div class="footer1">
+    <p class="logoend" href="home.html"><a>Bonsai</a></p>
+    <img class="logoend" src="images/logo.png">
+  </div>
+  <div class="footer2">
+    <p class="footer2">
+      Written by Kaia Nguyen, Khanh Mai, Ngoc Uong and Rachel Farvel. <br>
+      At Miami University, Oxford, Ohio, USA. <br> 
+      &copy; The Meaning of Flowers, 2023
     </p>
-    <a class="portfolio" href="https://www.behance.net/ngcung">behance.net/ngcung</a>
-    </div>
-  </footer>
+  </div>
+</footer>
 </body>
 
 
