--- a/information.html
+++ b/information.html
@@ -23,12 +23,7 @@
   <nav class="stripe menubar">
       <div class="content_container">
         <ul>
-<<<<<<< HEAD
-          <li style="float: left;"><img class="logo" src="images/logo.png"><span><a class="logo" 
-            href="index.html">Bonsai</a></span></li>
-=======
-          <li style="float: left;"><img class="logo" src="images/logo.png"><span><a class="logo" href="home.html">Bonsai</a></span></li>
->>>>>>> d2c0032ab6d09dcb6436d97c4f5dcbba99f236af
+          <li style="float: left;"><img class="logo" src="images/logo.png"><span><a class="logo" href="index.html">Bonsai</a></span></li>
           <li><a href="information.html">INFORMATION</a></li>
           <li><a href="FAQ.html">FAQ</a></li>
           <li><a href="contactus.html">CONTACT US</a></li>
