contact us update

--- a/contactus.html
+++ b/contactus.html
@@ -99,7 +99,7 @@
       }
       let form = document.getElementsByTagName("form")[0]; form.addEventListener("submit", (e) => {
         e.preventDefault();
-        alert("Form Submitted!");
+        alert("Thank you for submitting! We will review your request shortly.");
       });
   </script>
 
