--- a/home.html
+++ b/home.html
@@ -87,7 +87,7 @@
       </div>
       <div class="feature_item category3">
         <button>
-          <a href="FAQ">
+          <a href="FAQ.html">
          <h3>Styling</h3>
        </a>
         </button>
