--- a/contactus.html
+++ b/contactus.html
@@ -46,7 +46,7 @@
 <main>
     <div class="form-container";>
         <h1>Submission Form</h1>
-        <form onsubmit="showThankYouMessage(); return false;">
+        <form>
           <label for="name">Name:</label>
           <input type="text" id="name" name="name" required>
   
@@ -78,7 +78,7 @@
       <p class="footer2">
         Written by Kaia Nguyen, Khanh Mai, Ngoc Uong and Rachel Farvel. <br>
         At Miami University, Oxford, Ohio, USA. <br> 
-        &copy; The Meaning of Flowers, 2023
+        &copy; Art of Bonsai, 2023
       </p>
     </div>
   </footer>
