--- a/home.html
+++ b/home.html
@@ -113,7 +113,7 @@
       <p class="footer2">
         Written by Kaia Nguyen, Khanh Mai, Ngoc Uong and Rachel Farvel. <br>
         At Miami University, Oxford, Ohio, USA. <br> 
-        &copy; The Meaning of Flowers, 2023
+        &copy; Art of Bonsai, 2023
       </p>
     </div>
   </footer>
