--- a/home.html
+++ b/home.html
@@ -65,7 +65,7 @@
   </div>
   </div>
 
-  <div class="stripe features">
+  <div class="stripe features" id="overall">
     <div class="content_container">
       <h2>FAQ</h2>
       <p class="overall">Most people are introduced to Bonsai by purchasing a cheap, pre-made bonsai tree. Although this is without a doubt the easiest way to get started, it's much more interesting, cost-effective, and rewarding to learn how to grow and style your own tree.</p>
